--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "file_explorer"
+name = "rust_grep"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-walkdir = "2.3"
+r3bl_rs_utils = "0.9.14"
+atty = "*"
+
+[[bin]]
+name = "rust_grep"
+path = "src/main.rs"
